# clinicaltrials-gov-rs

./: .gitignore  Cargo.toml  LICENSE  MODELS.md  Makefile  README.md
.openapi-generator/: FILES
adrs/: 01-generate-client.md
docs/: AdverseEvent.md  AdverseEventsModule.md  AgencyClass.md  AgreementRestrictionType.md  AnalysisDispersionType.md  AnnotationModule.md  AnnotationSection.md  ArmGroup.md  ArmGroupType.md  ArmsInterventionsModule.md  AvailIpd.md  BaselineCharacteristicsModule.md  BaselineMeasure.md  BioSpec.md  BioSpecRetention.md  BooleanStats.md  BrowseBranch.md  BrowseLeaf.md  BrowseLeafRelevance.md  BrowseModule.md  CertainAgreement.md  ConditionsModule.md  ConfidenceIntervalNumSides.md  Contact.md  ContactRole.md  ContactsLocationsModule.md  DateStats.md  DateStruct.md  DateType.md  Denom.md  DenomCount.md  DerivedSection.md  DescriptionModule.md  DesignAllocation.md  DesignInfo.md  DesignMasking.md  DesignModule.md  DesignTimePerspective.md  DistItem.md  DocumentSection.md  (+111 more)
examples/: Cargo.toml  financial_analyst_medical_devices.rs  stock_catalyst_tracker.rs
src/apis/: configuration.rs  mod.rs  stats_api.rs  studies_api.rs  version_api.rs
src/models/: adverse_event.rs  adverse_events_module.rs  agency_class.rs  agreement_restriction_type.rs  analysis_dispersion_type.rs  annotation_module.rs  annotation_section.rs  arm_group.rs  arm_group_type.rs  arms_interventions_module.rs  avail_ipd.rs  baseline_characteristics_module.rs  baseline_measure.rs  bio_spec.rs  bio_spec_retention.rs  boolean_stats.rs  browse_branch.rs  browse_leaf.rs  contact.rs  (+130 more)
